# TestTask_R4C

./: .gitignore  pyproject.toml
R4C/: settings.py  urls.py
customers/: models.py  tests.py  views.py
customers/migrations/: 0002_customer_name.py
fixtures/: customers.json  orders.json  robots.json
orders/: models.py  serializers.py  services.py  tests.py  views.py
orders/migrations/: 0002_order_status.py
robots/: models.py  serializers.py  services.py  signals.py  tests.py  views.py
robots/migrations/: 0002_alter_robot_created.py
