[tool.poetry]
name = "test_r4c"
version = "0.1.0"
description = ""
authors = ["Marfa Nikitina <marfik93@mail.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
django = "4.1.2"
django-bootstrap4 = "^22.2"
djangorestframework = "3.14.0"
openpyxl = "3.0.10"
django_extensions = "3.2.1"
drf-excel = "2.2.0"
python-dotenv = "^0.21.0"


[tool.poetry.dev-dependencies]


[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
